--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(/css/base.css);
+@import url('../css/base.css');
 
 
 .ly_header {padding: 12px; width: 1024px; margin: 0 auto;}
@@ -54,7 +54,8 @@
 .bl_mainTable_cat {height: 32px; font-size: 12px; color: #767676; line-height: 32px;}
 .bl_mainTable_col {height: 40px; font-size: 13px; color: #191919; line-height: 40px; text-align: center;}
 .bl_mainTable_col button {margin: 0 2px;}
-.bl_mainTable_col button:not(.un_trueBtn, .un_falseBtn):hover {background: #f1f1f6; cursor: pointer;}
+.bl_mainTable_col button:not(.un_trueBtn):hover {background: #f1f1f6; cursor: pointer;}
+.bl_mainTable_col button:not(.un_falseBtn):hover {background: #f1f1f6; cursor: pointer;}
 /* 모디파이어 */
 .bl_mainTable_cat.bl_mainTable_cat__w170 {width: 170px;}
 .bl_mainTable_cat.bl_mainTable_cat__w107 {width: 107px;}
