--- a/css/common.css
+++ b/css/common.css
@@ -269,8 +269,8 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .un_oeGoalNum_item p {padding-top: 7px; color: #fff; text-align: center; width: 70px; line-height: 100px; height: 100px; background: linear-gradient(to bottom, #4FB480, #0E7441); box-shadow: inset 1px 2px 3px rgba(255,255,255,0.6), inset -2px -2px 2px rgba(0,0,0,0.25);}
 .un_oeGoalNum_item p::before {content: ''; display: block; width: 100%; height: 4px; position: absolute; top: 50%; transform: translateY(-50%); opacity: 10%; background: linear-gradient( to bottom, black 50%, white 50%);}
 .un_oeGoalNum_item .backface {width: 100%; height: 100%; top: 0; background: #0E7441; transform: rotateX(180deg); background: linear-gradient(to bottom, #4FB480, #0E7441); box-shadow: inset 1px 2px 3px rgba(255,255,255,0.6), inset -2px -2px 2px rgba(0,0,0,0.25);}
-.un_oeGoalNum_item .backface {animation: numRotate_backface 0.4s var(--i) linear forwards;}
-.un_oeGoalNum_item p {animation: numRotate_frontface 0.4s var(--i) linear forwards;}
+.un_oeGoalNum_item.am_GolaNum .backface {animation: numRotate_backface 0.4s var(--i) linear forwards;}
+.un_oeGoalNum_item.am_GolaNum p {animation: numRotate_frontface 0.4s var(--i) linear forwards;}
 /* .ly_mainCnt:hover .un_oeGoalNum_item {transform: rotateX(calc(360deg * var(--i))); transition: all calc(0.5s * var(--i)) ease-out;} */
 @keyframes numRotate_backface {
     0% {transform: rotateX(-540deg);}
