hidden 클래스 추가

--- a/css/base.css
+++ b/css/base.css
@@ -58,5 +58,8 @@ table {
 .blind {
 	display: none !important;
 }
+.hidden {
+	visibility: hidden;
+}
 input:focus::placeholder {color: transparent;}
 input:focus {outline: none;}
