--- a/css/common.css
+++ b/css/common.css
@@ -16,10 +16,15 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 
 
 
-.bl_header {display: flex; align-items: center;}
+.bl_header {display: flex; align-items: center; justify-content: space-between;}
 .bl_header_imgWrapper {width: 74px; height: 34px;}
 .bl_header_imgWrapper img {width: 100%; height: 100%; object-fit: cover; object-position: center;}
 .bl_header_txt {font-size: 20px; color: #fff; margin-left: 20px; padding-left: 20px; border-left: 1px solid rgba(255,255,255,0.3);}
+.bl_header_left {display: flex; align-items: center;}
+.bl_header_right {position: relative;}
+.bl_header_right p {color: #fff; font-size: 16px; height: 100%; cursor: pointer;}
+.bl_header_right ul {width: 170px; background: #fff; position: absolute; top: 20px; right: 0; border-radius: 5px; box-shadow: 4px 4px 8px rgba(0,0,0,0.3);}
+.bl_header_right li {width: 100%; height: 48px; line-height: 48px; text-align: center; font-size: 15px; font-weight: normal; cursor: pointer;}
 
 .bl_sideNavBar {position: fixed; top: 58px; width: 190px; height: 100vh; padding-left: 20px; padding-right: 20px; border-right: 1px solid #e1e1e1;}
 .bl_sideNavBar_list { border-bottom: 1px solid #e5e5ec; padding-top: 18px; padding-bottom: 18px; }
@@ -60,6 +65,10 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .bl_mainTable_row:first-child {border-bottom: 1px solid #191919;}
 .bl_mainTable_row.hover:hover .bl_mainTable_col{background: #fafafa;}
 .bl_mainTable_cat {height: 32px; font-size: 12px; color: #767676; line-height: 32px;}
+.bl_mainTable_cat.arrow {padding-left: 12px; cursor: pointer;}
+.bl_mainTable_cat.arrow::after {content: ''; display: inline-block; width: 12px; height: 12px; background: url(/images/ic_arrow__bottom.svg) center / cover; position: relative; top: 1px; left: 4px; opacity: 0; transition: all 0.4s;}
+.bl_mainTable_cat.arrow:hover::after {opacity: 1;}
+.bl_mainTable_cat.arrow.arrow_rev::after {transform: rotate(180deg);}
 .bl_mainTable_col {height: 40px; padding: 0 5px; font-size: 13px; color: #191919; line-height: 40px; text-align: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; position: relative;}
 .bl_mainTable_col span {margin-right: 8px; padding-right: 8px; border-right: 1px solid #e5e5ec;}
 .bl_mainTable_col button {margin: 0 2px;}
@@ -90,7 +99,7 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 
 .bl_pageControl {display: flex; align-items: center; justify-content: center;}
 .bl_pageControl p {font-size: 14px; color: #767676; margin: 0 14px;}
-.bl_pageControl a {display: inline-block; width: 28px; height: 28px; margin: 0 2px;}
+.bl_pageControl a {display: inline-block; width: 28px; height: 28px; margin: 0 2px; cursor: pointer;}
 
 .bl_pop_wrapper {display: flex; justify-content: center; align-items: center; background: rgba(0,0,0,0.3); width: 100vw; height: 100vh; position: fixed; top: 0; left: 0; z-index: 999;}
 .bl_pop {background: #fff; padding: 25px 30px 40px 30px; display: flex; flex-direction: column; align-items: center; border-radius: 10px;}
@@ -249,7 +258,6 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 
 .hp_taRight{text-align: right;}
 .hp_taLeft{text-align: left;}
-
 
 
 .un_falseBtn {color: #dc0000; background: none; border: none; }
@@ -466,6 +474,8 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .un_signUp_agree {text-align: left; font-size: 16px; line-height: 24px; margin-bottom: 30px;}
 .un_signUp_agree p {cursor: pointer; display: inline-block;  padding-left: 26px; background: url(/images/ic_roundCheck.svg) left bottom 2px no-repeat; }
 .un_signUp_agree p.on {background: url(/images/ic_roundCheck__green.svg) left bottom 2px no-repeat;}
+.un_signUp_btnWrapper button {width: 100%; border-radius: 5px; font-size: 15px;}
+.un_signUp_info .soft {color: #767676;}
 
 
 
