--- a/css/common.css
+++ b/css/common.css
@@ -23,8 +23,9 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .bl_header_left {display: flex; align-items: center;}
 .bl_header_right {position: relative;}
 .bl_header_right p {color: #fff; font-size: 16px; height: 100%; cursor: pointer;}
-.bl_header_right ul {width: 170px; background: #fff; position: absolute; top: 20px; right: 0; border-radius: 5px; box-shadow: 4px 4px 8px rgba(0,0,0,0.3);}
-.bl_header_right li {width: 100%; height: 48px; line-height: 48px; text-align: center; font-size: 15px; font-weight: normal; cursor: pointer;}
+.bl_header_right ul {width: 170px; background: #fff; position: absolute; top: 20px; right: 0; border-radius: 5px; box-shadow: 4px 4px 8px rgba(0,0,0,0.3); overflow: hidden; height: 0; transition: all 0.4s;}
+.bl_header_right li {width: 100%; height: 48px; line-height: 48px; text-align: center; font-size: 15px; font-weight: normal; cursor: pointer; }
+.bl_header_right .am_click ~ ul {height: 48px;}
 
 .bl_sideNavBar {position: fixed; top: 58px; width: 190px; height: 100vh; padding-left: 20px; padding-right: 20px; border-right: 1px solid #e1e1e1;}
 .bl_sideNavBar_list { border-bottom: 1px solid #e5e5ec; padding-top: 18px; padding-bottom: 18px; }
