--- a/css/common.css
+++ b/css/common.css
@@ -65,7 +65,7 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .bl_mainTable_row {border-bottom: 1px solid #e5e5ec;}
 .bl_mainTable_row:first-child {border-bottom: 1px solid #191919;}
 .bl_mainTable_row.hover:hover .bl_mainTable_col{background: #fafafa;}
-.bl_mainTable_cat {height: 32px; font-size: 12px; color: #767676; line-height: 32px;}
+.bl_mainTable_cat {height: 32px; font-size: 12px; color: #767676; line-height: 32px; white-space: nowrap;} 
 .bl_mainTable_cat.arrow {padding-left: 12px; cursor: pointer;}
 .bl_mainTable_cat.arrow::after {content: ''; display: inline-block; width: 12px; height: 12px; background: url(/images/ic_arrow__bottom.svg) center / cover; position: relative; top: 1px; left: 4px; opacity: 0; transition: all 0.4s;}
 .bl_mainTable_cat.arrow:hover::after {opacity: 1;}
@@ -228,6 +228,7 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .hp_w318 {width: 318px !important;}
 .hp_w271 {width: 271px !important;}
 .hp_w246 {width: 246px !important;}
+.hp_w220 {width: 220px !important;}
 .hp_w200 {width: 200px !important;}
 .hp_w191 {width: 191px !important;}
 .hp_w185 {width: 185px !important;}
