--- a/css/common.css
+++ b/css/common.css
@@ -67,8 +67,8 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .bl_mainTable_row.hover:hover .bl_mainTable_col{background: #fafafa;}
 .bl_mainTable_cat {height: 32px; font-size: 12px; color: #767676; line-height: 32px; white-space: nowrap;} 
 .bl_mainTable_cat.arrow {padding-left: 12px; cursor: pointer;}
-.bl_mainTable_cat.arrow::after {content: ''; display: inline-block; width: 12px; height: 12px; background: url(/images/ic_arrow__bottom.svg) center / cover; position: relative; top: 1px; left: 4px; opacity: 0; transition: all 0.4s;}
-.bl_mainTable_cat.arrow:hover::after {opacity: 1;}
+.bl_mainTable_cat.arrow::after {opacity: 1; content: ''; display: inline-block; width: 12px; height: 12px; background: url(/images/ic_arrow__bottom.svg) center / cover; position: relative; top: 1px; left: 4px; transition: all 0.4s;}
+/* .bl_mainTable_cat.arrow:hover::after {opacity: 1;} */
 .bl_mainTable_cat.arrow.arrow_rev::after {transform: rotate(180deg);}
 .bl_mainTable_col {height: 40px; padding: 0 5px; font-size: 13px; color: #191919; line-height: 40px; text-align: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; position: relative;}
 .bl_mainTable_col span {margin-right: 8px; padding-right: 8px; border-right: 1px solid #e5e5ec;}
