--- a/css/common.css
+++ b/css/common.css
@@ -23,9 +23,9 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .bl_header_left {display: flex; align-items: center;}
 .bl_header_right {position: relative;}
 .bl_header_right p {color: #fff; font-size: 16px; height: 100%; cursor: pointer;}
-.bl_header_right ul {width: 170px; background: #fff; position: absolute; top: 20px; right: 0; border-radius: 5px; box-shadow: 4px 4px 8px rgba(0,0,0,0.3); overflow: hidden; height: 0; transition: all 0.4s;}
-.bl_header_right li {width: 100%; height: 48px; line-height: 48px; text-align: center; font-size: 15px; font-weight: normal; cursor: pointer; }
-.bl_header_right .am_click ~ ul {height: 48px;}
+.bl_header_right ul {width: 170px; max-height: 0; background: #fff; position: absolute; top: 20px; right: 0; border-radius: 5px; box-shadow: 4px 4px 8px rgba(0,0,0,0.3); overflow: hidden;  transition: all 0.4s;}
+.bl_header_right li {width: 100%; height: 48px; line-height: 48px; text-align: center; font-size: 15px; font-weight: normal; cursor: pointer;}
+.bl_header_right .am_click ~ ul {max-height: 150px;}
 
 .bl_sideNavBar {position: fixed; top: 58px; width: 190px; height: 100vh; padding-left: 20px; padding-right: 20px; border-right: 1px solid #e1e1e1;}
 .bl_sideNavBar_list { border-bottom: 1px solid #e5e5ec; padding-top: 18px; padding-bottom: 18px; }
@@ -96,6 +96,8 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .bl_mainTable.bl_mainTable__reportV .bl_mainTable_col {line-height: normal; vertical-align: middle; height: 80px;}
 .bl_mainTable.bl_mainTable__reportV .bl_mainTable_col div {height: 40px; line-height: 40px; overflow: hidden; text-overflow: ellipsis;}
 .bl_mainTable.bl_mainTable__reportV .bl_mainTable_col div:first-child {border-bottom: 1px solid #e5e5ec;}
+.bl_mainTable_wrapper.psInfo_cat {margin-top: 60px; position: relative;}
+.bl_mainTable_wrapper.psInfo_cat::after {content: '재방문율'; display: block; width: 450px; padding: 15px; text-align: center; font-size: 12px; color: #25a765; border-bottom: 1px dotted #25a765; position: absolute; right: 0; top: -48px;}
 
 
 .bl_pageControl {display: flex; align-items: center; justify-content: center;}
@@ -251,10 +253,12 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 
 .hp_w100p {width: 100%;}
 
+.hp_mb60 {margin-bottom: 60px !important;}
 .hp_mb35 {margin-bottom: 35px !important;}
 .hp_mb30 {margin-bottom: 30px !important;}
 .hp_mb15 {margin-bottom: 15px !important;}
 
+.hp_mt60 {margin-top: 60px !important;}
 .hp_mt40 {margin-top: 40px !important;}
 .hp_mt30 {margin-top: 30px !important;}
 .hp_mt15 {margin-top: 15px !important;}
@@ -413,6 +417,10 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .un_calendar_part.soft {color: #ccc;}
 .un_calendar_part.check {background: #000; color: #fff;}
 .un_calendar_part.red {color: #dc0000;}
+
+.un_mainCalendarWrapper {display: flex; justify-content: center;}
+.un_mainCalendarWrapper .un_calendar_header {width: 25%;}
+.un_mainCalendarWrapper a {width: 20px; height: 20px;}
 
 .un_timeSet {margin-bottom: 70px; width: 98%; display: flex; justify-content: space-between;}
 .un_timeSet_twoRadioBtn {display: flex;}
