--- a/css/common.css
+++ b/css/common.css
@@ -268,6 +268,10 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .hp_taRight{text-align: right;}
 .hp_taLeft{text-align: left;}
 
+.hp_b34 {bottom: 34px !important;}
+
+
+
 .un_falseBtn {color: #dc0000; background: none; border: none; }
 .un_trueBtn {color: #25a765; background: none; border: none; }
 
@@ -481,6 +485,7 @@ header.hp_bgGreen {position: sticky; top: 0; z-index: 999;}
 .un_signUp_info input:last-child {margin-bottom: 0px;}
 .un_signUp_info p {font-size: 14px; position: absolute; left: 0; bottom: -25px;}
 .un_signUp_info button {position: absolute; right: 0; top: 50%; transform: translateY(-50%); border: none; background: none; cursor: pointer; color: #25a765;}
+.un_signUp_info form {display: flex; flex-direction: column; position: relative;}
 .un_signUp_textWrapper {width: 440px; height: 250px; margin-bottom: 20px; overflow-y: auto; background: #f7f9fa; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; padding: 30px 20px; text-align: left;}
 .un_signUp_textTtl {font-size: 18px; color: #191919; margin-bottom: 20px;}
 .un_signUp_textLi {font-size: 14px; color: #505050; margin-bottom: 10px; line-height: 20px;}
